--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -1,8 +1,8 @@
 spring.application.name=Agenda
 
 spring.datasource.url=jdbc:mysql://localhost:3306/agenda
-spring.datasource.username=root
-spring.datasource.password=custo
+spring.datasource.username="your_username"
+spring.datasource.password="your_password"
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
